--- a/wp-content/themes/onews/assets/css/style.css
+++ b/wp-content/themes/onews/assets/css/style.css
@@ -63,7 +63,7 @@
 }
 
 /* ici la classe .menu est générée par wordpress... on l'utilise du coup pour styliser le menu */
-.left__nav, 
+.left__nav,
 .menu {
   list-style-type: none;
   text-shadow: 0 0 4px #333;
@@ -74,7 +74,7 @@
   display: inline-block;
 }
 
-.left__nav-link, 
+.left__nav-link,
 .menu li a {
   color: white;
   padding: 0.5em 1em;
@@ -82,7 +82,7 @@
   font-weight: 700;
 }
 
-.left__nav-link:hover, 
+.left__nav-link:hover,
 .menu li a:hover {
   color: inherit;
   text-decoration: none;
@@ -180,6 +180,11 @@
   width: auto;
 }
 
+.post__nav__links {
+  display: flex;
+  justify-content: space-around;
+}
+
 /* Contact */
 #contact {
   display: -webkit-flex;
@@ -195,7 +200,7 @@
 #contact textarea,
 #contact select
 {
-   background-color: #f9f9f9;
+  background-color: #f9f9f9;
   border: none;
   border-bottom: 1px solid #4cced3;
 }
